# Claude-Science-Proxy

./: .gitignore  .gitleaks.toml  AGENT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.en.md  README.md  README.zh.md  SECURITY.md
.github/: pull_request_template.md
catalog/: capabilities.v1.json
desktop/: README.md  package-lock.json  (+1 more)
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: generate_csp_icons.py  icon.icns  tray_template.rgba
desktop/src-tauri/src/: config.rs  config_legacy.rs  lib.rs  lifecycle.rs  oauth_forge.rs  proc.rs  relay_presets.rs  scratch.rs  templates.rs
desktop/src-tauri/src/commands/: diagnostics.rs  editor_llm.rs  mcp.rs  mod.rs  profiles.rs  runtime.rs  skills.rs
desktop/src-tauri/src/mcp_manager/: builtin.rs  deploy.rs  mcp_http_tunnel_shim.cjs  mod.rs  model.rs  network_allowlist.rs  remote_deploy.rs  store.rs  web_search_server.py
desktop/src-tauri/src/runtime/: capability_catalog.rs  config_edit.rs  diagnostics.rs  editor_llm_sources.rs  i18n.rs  jsonc.rs  mod.rs  model_discovery.rs  model_sort.rs  operation.rs  platter.rs  profile.rs  profile_switch.rs  provider.rs  provider_pool.rs  proxy.rs  proxy_lifecycle.rs  sandbox_session.rs  science.rs  settings.rs  system.rs  transaction.rs
desktop/src-tauri/src/skill_manager/: builtin.rs  deploy.rs  mod.rs  model.rs  native_pick.rs  science_sync.rs  source_resolve.rs  store.rs  workspace_ingress.rs
desktop/src-tauri/src/skill_manager/csp-environment/: SKILL.md
desktop/src-tauri/src/skill_manager/csp-web-access/: SKILL.md
(+151 files in other folders)
