[package]
name = "desktop"
version = "0.2.1"
description = "CSSwitch 菜单栏 app（进程管家 + 配置面板）"
authors = ["CSSwitch"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# 虚拟 OAuth 伪造器（Rust 原生，去 node 依赖 —— 见 src/oauth_forge.rs）。
# 纯 RustCrypto，全部编进二进制，不引外部运行时。与 .mjs 的 v2 GCM 格式字节兼容
# （由 oauth_forge.rs 内 tests 的 node↔rust 双向对拍单测保证）。
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
base64 = "0.22"

